# wasm-template

./: Cargo.toml  README.md
src/: lib.rs
www/: index.html  main.js  package-lock.json  package.json  vite.config.js
